--- a/package.json
+++ b/package.json
@@ -8,14 +8,23 @@
     "start": "next start"
   },
   "dependencies": {
+    "@atlaskit/css-reset": "^6.0.1",
+    "@atlaskit/date": "^0.8.1",
+    "@atlaskit/lozenge": "^10.0.4",
+    "@atlaskit/theme": "^10.0.4",
     "next": "9.5.3",
-    "node-fetch": "^2.6.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "styled-components": "^5.1.1",
+    "victory": "^35.0.8"
   },
   "devDependencies": {
+    "@atlassian/eslint-config-observability": "^1.5.1",
     "@types/node": "^14.6.3",
+    "@types/node-fetch": "^2.5.7",
     "@types/react": "^16.9.49",
+    "eslint": "^6.8.0",
+    "prettier": "^2.1.1",
     "typescript": "^4.0.2"
   }
 }
