--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint pages utils components --ext .ts,.tsx"
   },
   "dependencies": {
     "@atlaskit/css-reset": "^6.0.1",
@@ -25,8 +26,10 @@
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-typescript": "^9.0.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
     "prettier": "^2.1.1",
     "typescript": "^4.0.2"
