--- a/package.json
+++ b/package.json
@@ -9,21 +9,20 @@
     "lint": "eslint pages utils components --ext .ts,.tsx"
   },
   "dependencies": {
-    "@atlaskit/css-reset": "^6.0.4",
+    "@atlaskit/css-reset": "latest",
     "@atlaskit/date": "^0.8.1",
-    "@atlaskit/lozenge": "^10.0.4",
-    "@atlaskit/theme": "^10.0.4",
-    "next": "^10.0.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "styled-components": "^5.1.1",
+    "@atlaskit/lozenge": "^11.0.0",
+    "@atlaskit/theme": "^11.0.0",
+    "next": "latest",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "victory": "^35.0.8"
   },
   "devDependencies": {
     "@types/node": "^14.6.3",
     "@types/node-fetch": "^2.5.7",
     "@types/react": "^16.9.49",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/eslint-plugin": "latest",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-typescript": "^9.0.0",
     "eslint-config-prettier": "^6.11.0",
@@ -32,6 +31,6 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
     "prettier": "^2.1.1",
-    "typescript": "^4.0.2"
+    "typescript": "latest"
   }
 }
