--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
   },
   "dependencies": {
     "@atlaskit/css-reset": "latest",
-    "@atlaskit/date": "^0.8.1",
-    "@atlaskit/lozenge": "^11.0.0",
-    "@atlaskit/theme": "^11.0.0",
-    "next": "latest",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "@atlaskit/date": "latest",
+    "@atlaskit/lozenge": "latest",
+    "@atlaskit/theme": "latest",
+    "next": "^13.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "victory": "^35.0.8"
   },
   "devDependencies": {
-    "@types/node": "^14.6.3",
+    "@types/node": "^16.0.0",
     "@types/node-fetch": "^2.5.7",
-    "@types/react": "^16.9.49",
+    "@types/react": "^18.0.25",
     "@typescript-eslint/eslint-plugin": "latest",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-typescript": "^9.0.0",
@@ -32,5 +32,8 @@
     "eslint-plugin-react": "^7.20.6",
     "prettier": "^2.1.1",
     "typescript": "latest"
+  },
+  "engines": {
+    "node": ">=14"
   }
 }
